--- a/src/components/Statistics/Statistic.module.css
+++ b/src/components/Statistics/Statistic.module.css
@@ -14,7 +14,7 @@
 }
 
 
-.item {
+.itemstat {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,4 +30,24 @@
     grid-auto-rows: 100px;
     grid-gap: 0;
 
+}
+
+li.itemstat:first-child {
+    background-color: lightskyblue;
+}
+
+li.itemstat:nth-of-type(2n) {
+    background-color: hotpink;
+}
+
+li.itemstat:nth-of-type(3n) {
+    background-color: lemonchiffon;
+}
+
+li.itemstat:nth-of-type(4n) {
+    background-color: turquoise;
+}
+
+li.itemstat:last-child {
+    background-color: lightsalmon;
 }
